endpoint-agent/k8s/endpoint.svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: endpoint-svc
spec:
  ports:
  - port: 80
    targetPort: 2222
    protocol: TCP
    name: http
  selector:
    app: endpoint
